--- a/public/css/show.css
+++ b/public/css/show.css
@@ -1,9 +1,14 @@
+.top-wrapper{
+    background-color: #1f1f1f;
+}
+body{
+    color:white;
+}
 .title-header{
     margin:0 auto;
     display:flex;
     width: 60%;
     align-content: space-between;
-
 }
 .left-box{
     display: flex;
@@ -41,10 +46,11 @@ margin-bottom: 1rem;
     
 }
 .poster{
-    /* width:33%;
-    margin-right: 20px; */
+    width:33%;
+    margin-right: 20px;
 }
 iframe {
+    width:66%;
     align-self: stretch;
     
 }
@@ -55,6 +61,56 @@ iframe {
     align-content: space-between;
     flex-direction: column;
 }
+.genre{
+    border: solid 2px;
+    border-radius: 1rem;
+    border-color:#aeaeae;
+    color:#aeaeae;
+    font-size: .875rem;
+    line-height: 1.25rem;
+    font-weight: 400;
+    padding: .25rem .75rem;
+}
+
 .plot{
     padding-right: 30%;
+    padding: .25rem .75rem;
+    border-bottom: solid 1px #aeaeae;
 }
+.listEl{
+    padding-right: 30%;
+    padding: .25rem .75rem;
+    border-bottom: solid 1px #aeaeae;
+}
+.last{
+    padding-bottom: 1rem;
+    border-bottom: none;
+}
+.bottom-wrapper{
+    height:1000px;
+}
+.container {
+    padding: 100px 20px 0;
+    max-width: 960px;
+    margin: 0 auto;
+  }
+  h1 {
+    margin: 0;
+    text-align: center;
+    font-size: 200px;
+    overflow: hidden;
+    line-height: 1;
+  }
+  h1 span {
+    display: block;
+    animation: reveal 1.5s cubic-bezier(0.77, 0, 0.175, 1) 0.5s;
+  }
+  
+  @keyframes reveal {
+    0% {
+      transform: translate(0,100%);
+    }
+    100% {
+      transform: translate(0,0);
+    }
+  }
