some show changes

--- a/views/movies/show.ejs
+++ b/views/movies/show.ejs
@@ -82,10 +82,15 @@
     </div>
       <section>
         <div class="bottom-wrapper">
-          <div class="container-fluid">
-            <h1>
-                <span>Bangladesh</span>
-            </h1>
+          <div class="auto-container">
+            <div class="row">
+              <div class="column col-lg-6 col-md-12 col-sm-12">
+                <div class="sec-title">
+                  <h2><%=oneMovie.Awards%></h2>
+                </div>
+              </div>					
+            </div>							
+          </div>	
         </div>
       </section> 
     
