--- a/public/css/show.css
+++ b/public/css/show.css
@@ -1,9 +1,18 @@
+body{
+    font-family: 'Raleway', sans-serif;
+}
+.row0{
+    background-color: #212529;
+}
+.navbar{
+    background-color: #212529;
+}
 .top-wrapper{
     background-color: #1f1f1f;
-}
-body{
     color:white;
+    padding-bottom: 10px;
 }
+
 .title-header{
     margin:0 auto;
     display:flex;
@@ -22,7 +31,7 @@ margin-right: 1.5rem;
 display: flex;
 width: 40%;
 flex-direction: row;
-align-items: center;
+
 justify-content: space-between;
 -moz-box-pack: end;
 text-align: center;
@@ -60,6 +69,7 @@ iframe {
     width: 60%;
     align-content: space-between;
     flex-direction: column;
+    padding-bottom: 50px;
 }
 .genre{
     border: solid 2px;
@@ -74,95 +84,48 @@ iframe {
 
 .plot{
     padding-right: 30%;
-    padding: .25rem .75rem;
+    padding: 1rem .75rem;
     border-bottom: solid 1px #aeaeae;
+}
+.cat{
+    font-weight: bolder;
 }
 .listEl{
     padding-right: 30%;
     padding: .25rem .75rem;
     border-bottom: solid 1px #aeaeae;
+    
+}
+
+#detail-btn{
+    margin:0 auto;
+    display:block;
+    max-width: 20%;
+    background-color: #313131;
+    border-color: #1f1f1f;
 }
 .last{
     padding-bottom: 1rem;
     border-bottom: none;
 }
+.middle-wrapper{
+    width: 100%;
+    
+}
 .bottom-wrapper{
-    height:1000px;
+    width: 100%;
+    background-color: #1f1f1f; 
+    height: 300px;   
 }
-.auto-container{
-	position:static;
-	max-width:1200px;
-	padding:0px 15px;
-	margin:0 auto;
+.awards{
+    
+    padding-left: 0.75rem;
+    border-left: solid 3px #f5c518;
+    font-weight: bold;
 }
-
-.sec-title{
-	position:relative;
-	margin-bottom:45px;
-}
-
-.sec-title .title{
-	position: relative;
-    color: #84858a;
-    font-size: 16px;
-    letter-spacing: 1px;
-    font-weight: 600;
-    padding-top: 30px;
-    margin-bottom: 10px;
-    text-transform: capitalize;
+.listEl2{
+    padding-right: 30%;
+    padding: .25rem .75rem;
+    border-bottom: solid 1px #aeaeae;
 }
 
-.sec-title .title:before{
-    position: absolute;
-    content: '';
-    left: 0px;
-    top: 0px;
-    width: 6px;
-    height: 6px;
-    background-color: #f43737;
-}
-
-.sec-title h2{
-    position: relative;
-    color: #1f1f1f;
-    font-weight: 700;
-    line-height: 1.2em;
-    text-transform: capitalize;
-	-webkit-mask-image: linear-gradient(-75deg, rgba(244,55,55,0.6) 50%, #f43737 50%, rgba(0,0,0,1) 70%);
-    -webkit-mask-size: 200%;
-    animation: shine 2s infinite;
-}
-
-@-webkit-keyframes shine {
-  from {
-    -webkit-mask-position: 150%;
-  }
-  
-  to {
-    -webkit-mask-position: -50%;
-  }
-}
-
-.sec-title.centered{
-	text-align: center;
-}
-
-.sec-title.centered .text{
-	max-width:580px;
-	margin:0 auto;
-}
-
-.sec-title .title.light::before{
-	background-color:#ffffff;
-}
-
-.sec-title.light .title,
-.sec-title.light h2,
-.sec-title.light .text{
-	color:#ffffff;
-}
-
-.sec-title.centered .title:before{
-	left:50%;
-	margin-left:-3px;
-}
