--- a/views/movies/index.ejs
+++ b/views/movies/index.ejs
@@ -5,35 +5,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Raleway&family=Roboto+Condensed:wght@700&display=swap');
+    </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/navbar.css">
     <link rel="stylesheet" href="css/index.css">
     <script defer src="js/app.js"></script>
     <title>Document</title>
 </head>
 
 <body>
-
     <%- include('../partials/navbar.ejs') %>
-        <div id="moviesGrid">
-            <% for(let i=0; i < allMovies.length; i++) { %>
-                <div id="moviesSolo">
-                    <a href="/movies/<%= allMovies[i]._id  %>">
-                        <h2>
-                            <%= allMovies[i].Title %>
-                        </h2>
-                    </a>
-                    <div id="moviesPoster">
-                    <img src="<%=allMovies[i].Poster%>" alt="">
+        <div class="page-wrapper">
+            <div id="moviesGrid">
+                <% for(let i=0; i < allMovies.length; i++) { %>
+                    <div id="moviesSolo">
+                        <a href="/movies/<%= allMovies[i]._id  %>">
+                            <h2>
+                                <%= allMovies[i].Title %>
+                            </h2>
+                        </a>
+                        <div id="moviesPoster">
+                            <img src="<%=allMovies[i].Poster%>" alt="">
+                        </div>
+                        <form action="/movies/<%= allMovies[i]._id %>?_method=DELETE" method="POST">
+                            <input type="submit" value="Delete this movie">
+                        </form>
+                        <a href="/movies/<%= allMovies[i]._id  %>/edit">Edit this movie</a>
                     </div>
-                    <form action="/movies/<%= allMovies[i]._id %>?_method=DELETE" method="POST">
-                        <input type="submit" value="Delete this movie">
-                    </form>
-                    <a href="/movies/<%= allMovies[i]._id  %>/edit">Edit this movie</a>
-                </div>
 
-                <% } %>
+                    <% } %>
+            </div>
         </div>
+
 
 
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
@@ -42,6 +48,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js"
             integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/"
             crossorigin="anonymous"></script>
+
 </body>
 
 </html>
