--- a/views/movies/new.ejs
+++ b/views/movies/new.ejs
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Raleway&family=Roboto+Condensed:wght@700&display=swap');
+    </style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Movie</title>
 </head>
+
 <body>
     <h1>Add a new movie to your watchlist</h1>
     <form method="POST" action="/movies">
@@ -20,6 +25,7 @@
         <br>
         <input type="submit">
     </form>
-    
+
 </body>
+
 </html>
