--- a/views/search/search.ejs
+++ b/views/search/search.ejs
@@ -12,6 +12,8 @@
     integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
   <link rel="stylesheet" href="css/navbar.css">
   <link rel="stylesheet" href="css/search.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script defer src="../js/navbar.js"></script>
   <title>Search</title>
 </head>
 
