--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,9 +1,9 @@
 <div class="wrapper row0">
   <div id="header-container" class="horizontal">
     <div id="logo" class="fl-left">
-      <h1>Title</h1>
+      <h1>MOVIO</h1>
     </div>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fl-right">
+    <nav class="navbar navbar-expand-lg navbar-dark fl-right">
       <div class="container-fluid">
         <a class="navbar-brand" href="/">Home</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
