--- a/views/search/searchResults.ejs
+++ b/views/search/searchResults.ejs
@@ -10,7 +10,9 @@
     </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/navbar.css">
+    <link rel="stylesheet" href="../css/footer.css">
+        <link rel="stylesheet" href="../css/searchResults.css">
     <script defer src="../js/searchController/search_app.js"></script>
 
     <!-- <link rel="stylesheet" href="css/homepage.css">
@@ -20,26 +22,39 @@
 
 <body>
     <%- include('../partials/navbar.ejs') %>
+    <div class="grid-wrapper">
+        <div class="grid-body">
+            <% for(let i=0; i < searchResults.length; i++) { %>
+                <% if(searchResults[i].Poster ==="N/A"){searchResults[i].Poster="https://westsiderc.org/wp-content/uploads/2019/08/Image-Not-Available.png"}%>
+                <div class="card">
+                    <article class= "content">
+                        <div class="content-img">
+                            <form action="/movies" method="POST">
+                                <input name="Title" type="hidden" value="<%=searchResults[i].Title%>">
+                                <input name="Year" type="hidden" value="<%=searchResults[i].Year%>">
+                                <input name="Type" type="hidden" value="<%=searchResults[i].Type%>">
+                                <input name="Poster" type="hidden" value="<%=searchResults[i].Poster%>">
+                                <input class="movie-img" type="image" src="<%=searchResults[i].Poster%>" alt="submit">
+                            </form>
+                        </div>                   
+                        <div class="context-text">
+                            <h2 class="title"><%=searchResults[i].Title%></h2>
+                            <!-- <br>
+                            <p class="copy">Released: <%=searchResults[i].Year%></p> -->
+                            
+                        </div>                    
+                        
+                    </article>
+                        
+                </div>
+                
+            <%}%>
+        </div>
 
-
-        <% for(let i=0; i < searchResults.length; i++) { %>
-
-            <p>Title: <%=searchResults[i].Title%>
-            </p>
-            <p>Year: <%=searchResults[i].Year%>
-            </p>
-            <p>Director: <%=searchResults[i].Director%>
-            </p>
-            <img src="<%=searchResults[i].Poster%>" alt="">
-            <form action="/movies" method="POST">
-                <input name="Title" type="hidden" value="<%=searchResults[i].Title%>">
-                <input name="Year" type="hidden" value="<%=searchResults[i].Year%>">
-                <input name="Type" type="hidden" value="<%=searchResults[i].Type%>">
-                <input name="Poster" type="hidden" value="<%=searchResults[i].Poster%>">
-
-                <input type="submit" value="Add to Watchlist">
-            </form>
-            <% } %>
+    </div>
+    <%- include('../partials/footer.ejs') %>
+    
+        
 
                 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
                     integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp"
