--- a/public/css/index.css
+++ b/public/css/index.css
@@ -11,9 +11,8 @@ body{
     background-color: #212529;
 }
 #moviesGrid {
-    display:flex;
-    flex-flow: row wrap;
-    justify-content: space-around;
+    display:grid;
+    grid-template-columns: 33% 33% 33%;
     max-width: 76%;
     margin: 0 auto;
     background-color: gray;
@@ -21,17 +20,19 @@ body{
 }
 
 #moviesSolo{
-    background-color: dimgray;
-    display: flex;
-    flex-flow: column nowrap;
-    max-width: 25%;
     overflow: hidden;
+    text-decoration: none;
     align-items: center;
-    padding: 10px;
-    
+    padding: 10px;  
 }
-/* 
+
+
 #moviesPoster {
     max-height: 300px;
     max-width: 250px;
-} */
+    padding: 4px;
+}
+
+#moviesOptions {
+    margin: 4px;
+}
