minor searchresults css improvements

--- a/public/css/searchResults.css
+++ b/public/css/searchResults.css
@@ -56,6 +56,15 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
+  }
+  .title{
+      position: relative;
+      
+  }
+  .copy{
+      position: relative;
+     
   }
  
   .content:hover .context-text {
