--- a/views/search/searchResults.ejs
+++ b/views/search/searchResults.ejs
@@ -38,9 +38,8 @@
                             </form>
                         </div>                   
                         <div class="context-text">
-                            <h2 class="title"><%=searchResults[i].Title%></h2>
-                            <!-- <br>
-                            <p class="copy">Released: <%=searchResults[i].Year%></p> -->
+                            <h3 class="title"><%=searchResults[i].Title%></h3>
+                            <p class="copy">Released: <%=searchResults[i].Year%></p>
                             
                         </div>                    
                         
