--- a/views/search/searchResults.ejs
+++ b/views/search/searchResults.ejs
@@ -12,7 +12,7 @@
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/navbar.css">
     <link rel="stylesheet" href="../css/footer.css">
-        <link rel="stylesheet" href="../css/searchResults.css">
+    <link rel="stylesheet" href="../css/searchResults.css">
     <script defer src="../js/searchController/search_app.js"></script>
 
     <!-- <link rel="stylesheet" href="css/homepage.css">
@@ -22,45 +22,51 @@
 
 <body>
     <%- include('../partials/navbar.ejs') %>
-    <div class="grid-wrapper">
-        <div class="grid-body">
-            <% for(let i=0; i < searchResults.length; i++) { %>
-                <% if(searchResults[i].Poster ==="N/A"){searchResults[i].Poster="https://westsiderc.org/wp-content/uploads/2019/08/Image-Not-Available.png"}%>
-                <div class="card">
-                    <article class= "content">
-                        <div class="content-img">
-                            <form action="/movies" method="POST">
-                                <input name="Title" type="hidden" value="<%=searchResults[i].Title%>">
-                                <input name="Year" type="hidden" value="<%=searchResults[i].Year%>">
-                                <input name="Type" type="hidden" value="<%=searchResults[i].Type%>">
-                                <input name="Poster" type="hidden" value="<%=searchResults[i].Poster%>">
-                                <input class="movie-img" type="image" src="<%=searchResults[i].Poster%>" alt="submit">
-                            </form>
-                        </div>                   
-                        <div class="context-text">
-                            <h3 class="title"><%=searchResults[i].Title%></h3>
-                            <p class="copy">Released: <%=searchResults[i].Year%></p>
-                            
-                        </div>                    
-                        
-                    </article>
-                        
-                </div>
-                
-            <%}%>
+        <div class="grid-wrapper">
+            <div class="grid-body">
+                <% for(let i=0; i < searchResults.length; i++) { %>
+                    <% if(searchResults[i].Poster==="N/A"
+                        ){searchResults[i].Poster="https://westsiderc.org/wp-content/uploads/2019/08/Image-Not-Available.png"
+                        }%>
+                        <div class="card">
+                            <article class="content">
+                                <div class="content-img">
+                                    <form action="/movies" method="POST">
+                                        <input name="Title" type="hidden" value="<%=searchResults[i].Title%>">
+                                        <input name="Year" type="hidden" value="<%=searchResults[i].Year%>">
+                                        <input name="Type" type="hidden" value="<%=searchResults[i].Type%>">
+                                        <input name="Poster" type="hidden" value="<%=searchResults[i].Poster%>">
+                                        <input class="movie-img" type="image" src="<%=searchResults[i].Poster%>"
+                                            alt="submit">
+                                    </form>
+                                </div>
+                                <div class="context-text">
+                                    <h3 class="title">
+                                        <%=searchResults[i].Title%>
+                                    </h3>
+                                    <p class="copy">Released: <%=searchResults[i].Year%>
+                                    </p>
+
+                                </div>
+
+                            </article>
+
+                        </div>
+
+                        <%}%>
+            </div>
+
         </div>
+        <%- include('../partials/footer.ejs') %>
 
-    </div>
-    <%- include('../partials/footer.ejs') %>
-    
-        
 
-                <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
-                    integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp"
-                    crossorigin="anonymous"></script>
-                <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js"
-                    integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/"
-                    crossorigin="anonymous"></script>
+
+            <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
+                integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp"
+                crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js"
+                integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/"
+                crossorigin="anonymous"></script>
 
 
 </body>
